# osx-netsan

./: README.md  extract_project_description.py  pyproject.toml
src/: config.json  main.py
src/scanners/: network_scanner.py
src/ui/: config_editor.py  nmap_ui.py  scan_type_dialog.py
src/utils/: alert_criteria.py  alert_manager.py  alert_rule_dialog.py  alerts.py  config_manager.py  config_manager_utils.py  event_subscriber.py  scheduler.py
